--- a/UpKeepProject/UnitTestProject2/UnitTestProject2.csproj
+++ b/UpKeepProject/UnitTestProject2/UnitTestProject2.csproj
@@ -4,20 +4,20 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{73A04A9A-0889-4106-B45A-F9F62D9F1BDD}</ProjectGuid>
+    <ProjectGuid>{256F0F0B-C062-4F8B-9191-AA2EF248D514}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UpKeepProject</RootNamespace>
-    <AssemblyName>UpKeepProject</AssemblyName>
+    <RootNamespace>UnitTestProject2</RootNamespace>
+    <AssemblyName>UnitTestProject2</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.16299.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>UpKeepProject_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>UnitTestProject2_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">$(VisualStudioVersion)</UnitTestPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -92,74 +92,30 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Command\App\CreateCommand.cs" />
-    <Compile Include="Command\App\DeleteCommand.cs" />
-    <Compile Include="Command\App\NavigationCommand.cs" />
-    <Compile Include="Command\App\NotImplementedCommand.cs" />
-    <Compile Include="Command\App\ReferenceChangeCommand.cs" />
-    <Compile Include="Command\App\SetViewStateCommand.cs" />
-    <Compile Include="Command\App\UpdateCommand.cs" />
-    <Compile Include="Command\Base\CommandBase.cs" />
-    <Compile Include="Command\Base\CRUDCommandBase.cs" />
-    <Compile Include="Command\Base\INotifableCommand.cs" />
-    <Compile Include="Data\Base\IDomainClass.cs" />
-    <Compile Include="Data\Logic\PersonaleLogic.cs" />
-    <Compile Include="Data\Logic\KundeLogic.cs" />
-    <Compile Include="Data\Domain\Kunde.cs" />
-    <Compile Include="Model\Base\CatalogEFBase.cs" />
-    <Compile Include="Data\Base\DomainClassBase.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Model\App\DomainModel.cs" />
-    <Compile Include="Model\Base\CatalogAppBase.cs" />
-    <Compile Include="Model\Base\CatalogBase.cs" />
-    <Compile Include="Model\Base\ICatalog.cs" />
-    <Compile Include="Model\Catalog\KundeCatalog.cs" />
-    <Compile Include="Model\Catalog\PersonaleCatalog.cs" />
-    <Compile Include="Data\Domain\Personale.cs" />
+    <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="PersonaleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\Context\UpkeepContext.cs" />
-    <Compile Include="Viewmodel\App\MainPageViewModel.cs" />
-    <Compile Include="Viewmodel\Base\DataViewModelAppBase.cs" />
-    <Compile Include="Viewmodel\Base\DataViewModelBase.cs" />
-    <Compile Include="Viewmodel\Base\IDataViewModel.cs" />
-    <Compile Include="Viewmodel\Base\IPageViewModel.cs" />
-    <Compile Include="Viewmodel\Base\PageViewModelAppBase.cs" />
-    <Compile Include="Viewmodel\Base\PageViewModelBase.cs" />
-    <Compile Include="Viewmodel\Base\PageViewModelState.cs" />
-    <Compile Include="Viewmodel\Data\KundeDataViewModel.cs" />
-    <Compile Include="Viewmodel\Data\PersonaleDataViewModel.cs" />
-    <Compile Include="Viewmodel\Page\KundePageViewModel.cs" />
-    <Compile Include="Viewmodel\Page\PersonalePageViewModel.cs" />
-    <Compile Include="View\Domain\ForsideView.xaml.cs">
-      <DependentUpon>ForsideView.xaml</DependentUpon>
+    <Compile Include="UnitTestApp.xaml.cs">
+      <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Domain\KundeView.xaml.cs">
-      <DependentUpon>KundeView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\Domain\PersonaleView.xaml.cs">
-      <DependentUpon>PersonaleView.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="KundeTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="UnitTestApp.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="efpt.config.json" />
-    <None Include="UpKeepProject_TemporaryKey.pfx" />
+    <None Include="UnitTestProject2_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Image\Black.png" />
-    <Content Include="Assets\Image\cleanplus-logo-alm.png" />
-    <Content Include="Assets\Image\cplogo-bund.png" />
-    <Content Include="Assets\Image\iconfinder_plus_172525.png" />
-    <Content Include="Assets\Image\iconfinder_trash_172607.png" />
-    <Content Include="Assets\Image\iconfinder_update_172618.png" />
-    <Content Include="Properties\Default.rd.xml" />
+    <Content Include="Properties\UnitTestApp.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
@@ -167,39 +123,24 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Content Include="Spørgsmål.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\Domain\ForsideView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\Domain\KundeView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\Domain\PersonaleView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer">
-      <Version>2.1.4</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
+    <PackageReference Include="MSTest.TestAdapter">
+      <Version>1.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="MSTest.TestFramework">
+      <Version>1.3.2</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\UpKeepProject\UpKeepProject.csproj">
+      <Project>{73a04a9a-0889-4106-b45a-f9f62d9f1bdd}</Project>
+      <Name>UpKeepProject</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
